RESOLVED FIXED 266438
[WebGPU] CTS validation/texture/bgra8unorm_storage is failing
https://bugs.webkit.org/show_bug.cgi?id=266438
Summary [WebGPU] CTS validation/texture/bgra8unorm_storage is failing
Mike Wyrzykowski
Reported 2023-12-14 14:08:24 PST
[WebGPU] CTS validation/texture/bgra8unorm_storage is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-14 14:08:51 PST
Mike Wyrzykowski
Comment 2 2023-12-14 19:47:49 PST
EWS
Comment 3 2023-12-28 15:48:28 PST
Committed 272525@main (d47bd56357dd): <https://commits.webkit.org/272525@main> Reviewed commits have been landed. Closing PR #21843 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.