[WebGPU] CTS validation/texture/bgra8unorm_storage is failing https://bugs.webkit.org/show_bug.cgi?id=266438 <radar://119687642>

Reviewed by Tadeu Zagallo.

Add validation for bgra8unorm-storage and add the now passing expectations.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::TypeChecker):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::hasFeature const):
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::buildFeatureSet):
(WebGPU::Device::createShaderModule):

Canonical link: https://commits.webkit.org/272525@main